# solin-android

./: .gitignore  AGENTS.md  Guidebook.md  LICENSE  README.md  README.zh-CN.md  build.gradle.kts  settings.gradle.kts
app/: build.gradle.kts  proguard-bundled-models-instrumentation.pro  proguard-rules.pro
app/src/main/cpp/: CMakeLists.txt  zvec_native_store.cpp
docs/: agent_core_modules.md  agent_loop_multi_agent_plan.md  ai_behavior_eval_plan.md  ai_friendly_architecture_multi_agent_plan.md  bundled_model_package.md  capability_matrix.json  harness_architecture_improvements.md  index.md  intent_routing_skill_arbitration.md  model_capability_profiles.json  model_driven_app_control_multi_agent_plan.md  model_license_metadata.json  model_license_review.json  model_manifest.md  optimization_plan_weaknesses.md  perf_baseline_template.properties  phone_acceptance.md  privacy_notice.md  privacy_review.json  release_blocker_dashboard.md  release_checklist.md  release_operations_record.json  release_readiness.md  release_record.json  release_validation_record.json  roadmap_gap_matrix.json  screen_ocr_agent_optimization_plan.md  solin_share_draft.md  store_policy_record.json  ui_redesign_multi_agent.md  validation_report.md
gradle/: libs.versions.toml  modelpack-assets.gradle
modelpackE2b/: build.gradle.kts
modelpackE2bExtra/: build.gradle.kts
modelpackE4b/: build.gradle.kts
modelpackE4bExtra/: build.gradle.kts
releaseSmoke/: build.gradle.kts  proguard-rules.pro
scripts/: capture_release_screenshots.sh  capture_x86_release_screenshots.sh  collect_perf_baseline.sh  (+46 more)
(+752 files in other folders)
